--- a/client/package.json
+++ b/client/package.json
@@ -12,8 +12,19 @@
     "build": "snowpack build"
   },
   "devDependencies": {
+    "@snowpack/plugin-build-script": "^2.1.0",
+    "@snowpack/plugin-postcss": "^1.1.0",
+    "@snowpack/plugin-svelte": "^3.5.2",
     "@snowpack/plugin-typescript": "^1.2.1",
+    "@tsconfig/svelte": "^1.0.10",
+    "autoprefixer": "^10.2.4",
+    "postcss": "^8.2.6",
+    "postcss-cli": "^8.3.1",
+    "postcss-import": "^14.0.0",
+    "rollup": "^2.39.1",
     "snowpack": "^3.0.11",
+    "svelte": "^3.32.3",
+    "tailwindcss": "^2.0.3",
     "typescript": "^4.1.3"
   }
 }
