--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
     "@snowpack/plugin-typescript": "^1.2.1",
     "@tsconfig/svelte": "^1.0.10",
     "autoprefixer": "^10.2.4",
+    "http-proxy": "^1.18.1",
     "postcss": "^8.2.6",
     "postcss-cli": "^8.3.1",
     "postcss-import": "^14.0.0",
